force-app/main/default/objects/Deposito__c/Deposito__c.object-meta.xml
<CustomObject>
    <label>Depósito</label>
    <nameField>
        <label>Nombre del depósito</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depósitos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>