force-app/main/default/objects/Deposito__c/fields/Coste_de_legalizacion__c.field-meta.xml
<CustomField>
    <fullName>Coste_de_legalizacion__c</fullName>
    <description>Campo utilizado para la fórmula que calcula el crédito en deposito</description>
    <label>Coste de legalización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>