force-app/main/default/objects/Deposito__c/fields/Credito__c.field-meta.xml
<CustomField>
    <fullName>Credito__c</fullName>
    <formula>IF( 
Es_aereo__c = true, 
(Capacidad__c*0.515) * 0.85 * ((Presupuesto__r.Precio_producto_gas__c * 1.21) + 0.015) + ((Equipos_exterior__c - Coste_de_legalizacion__c) /2 ) + (Presupuesto__r.Total_inversion__c), 
(Capacidad__c*0.515) * 0.85 * ((Presupuesto__r.Precio_producto_gas__c * 1.21) + 0.015) + (Equipos_exterior__c - Coste_de_legalizacion__c ) + (Presupuesto__r.Total_inversion__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>