force-app/main/default/objects/Deposito__c/fields/Credito_divisa__c.field-meta.xml
<CustomField>
    <fullName>Credito_divisa__c</fullName>
    <label>Crédito (divisa)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>