force-app/main/default/objects/Deposito__c/fields/Es_aereo__c.field-meta.xml
<CustomField>
    <fullName>Es_aereo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es aéreo</label>
    <type>Checkbox</type>
</CustomField>