force-app/main/default/objects/Deposito__c/fields/Instalacion_exterior__c.field-meta.xml
<CustomField>
    <fullName>Instalacion_exterior__c</fullName>
    <label>Instalación exterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>