force-app/main/default/objects/Deposito__c/fields/Obra_civil_vallado__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil_vallado__c</fullName>
    <label>Obra civil vallado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>