force-app/main/default/objects/Deposito__c/fields/Proyectos__c.field-meta.xml
<CustomField>
    <fullName>Proyectos__c</fullName>
    <label>Proyectos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>